--- a/package.json
+++ b/package.json
@@ -1,23 +1,40 @@
 {
   "name": "@evolv/javascript-sdk",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "This is the official JavaScript client for the Evolv Technologies optimization platform.",
+  "main": "src/index.js",
   "type": "module",
+  "homepage": "https://www.evolv.ai",
+  "bugs": {
+    "url": "https://github.com/evolv-ai/javascript-sdk/issues",
+    "email": "support@evolv.ai"
+  },
+  "directories": {
+    "doc": "./docs"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/evolv-ai/javascript-sdk"
+  },
+  "engines": {
+    "node": ">=13"
+  },
   "scripts": {
     "test": "mocha",
     "build": "webpack --config=webpack.dev.cjs",
     "build-prod": "webpack --config=webpack.prod.cjs",
-    "docs": "jsdoc -c jsdocs.config.json -d ./docs/ src/index.js"
+    "docs": "jsdoc -c jsdocs.config.json src/index.js src/docs/README.md"
   },
-  "author": "",
+  "author": {
+    "name": "Evolv Technologies",
+    "email": "support@evolv.ai"
+  },
   "license": "MIT",
   "dependencies": {
-    "base64-arraybuffer": "^0.2.0",
-    "deepmerge": "^4.2.2",
-    "jsdoc": "^3.6.3"
+    "base64-arraybuffer": "^0.2.0"
   },
   "devDependencies": {
+    "jsdoc": "^3.6.3",
     "chai": "^4.2.0",
     "chai-spies": "^1.0.0",
     "mocha": "^7.1.0",
