fix: add deepmerge

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "base64-arraybuffer": "^0.2.0"
+    "base64-arraybuffer": "^0.2.0",
+    "deepmerge": "^4.2.2"
   },
   "devDependencies": {
     "jsdoc": "^3.6.3",
