Removing Node.js dependencies from bundle

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "test": "mocha",
     "build": "webpack --config=webpack.dev.cjs",
-    "build-prod": "webpack --config=webpack.prod.cjs",
+    "build-prod": "webpack --config=webpack.prod.cjs --display-modules",
     "docs": "jsdoc -c jsdocs.config.json src/index.js src/docs/README.md"
   },
   "author": {
@@ -35,9 +35,9 @@
     "deepmerge": "^4.2.2"
   },
   "devDependencies": {
-    "jsdoc": "^3.6.3",
     "chai": "^4.2.0",
     "chai-spies": "^1.0.0",
+    "jsdoc": "^3.6.3",
     "mocha": "^7.1.0",
     "webcrypto": "git+https://github.com/nodejs/webcrypto.git",
     "webpack": "^4.42.0",
