--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "node": ">=13"
   },
   "scripts": {
-    "prepublish": "webpack --config=webpack.prod.cjs",
-    "test": "mocha",
-    "build": "webpack --config=webpack.dev.cjs",
+    "prepublishOnly": "webpack --experimental-modules --config=webpack.prod.cjs",
+    "test": "mocha --experimental-modules",
+    "build": "webpack --experimental-modules --config=webpack.dev.cjs",
     "docs": "jsdoc -c jsdocs.config.json src/index.js src/docs/README.md"
   },
   "author": {
