--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
   "main": "dist/index.js",
   "module": "src/index.js",
   "exports": {
-    ".": {
-      "default": "./src/index.js",
-      "require": "./dist/index.js"
-    }
+    "import": "./src/index.js",
+    "require": "./dist/index.js"
   },
   "type": "module",
   "homepage": "https://www.evolv.ai",
@@ -24,7 +22,7 @@
     "url": "https://github.com/evolv-ai/javascript-sdk"
   },
   "engines": {
-    "node": ">=12"
+    "node": ">=13"
   },
   "scripts": {
     "prepublishOnly": "webpack --experimental-modules --config=webpack.prod.cjs",
@@ -41,8 +39,7 @@
   "license": "MIT",
   "dependencies": {
     "base64-arraybuffer": "^0.2.0",
-    "deepmerge": "^4.2.2",
-    "xmlhttprequest": "^1.8.0"
+    "deepmerge": "^4.2.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
@@ -53,7 +50,8 @@
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-merge": "^4.2.2",
-    "xhr-mock": "^2.5.1"
+    "xhr-mock": "^2.5.1",
+    "xmlhttprequest": "^1.8.0"
   },
   "mocha": {
     "extension": [
