--- a/.github/workflows/on-deployment.yml
+++ b/.github/workflows/on-deployment.yml
@@ -8,11 +8,15 @@ jobs:
     name: Deploy to Environment
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout Ref
+        uses: actions/checkout@v1
+        with: 
+          ref: ${{ github.event.deployment.ref }}
       - name: Set Variables
         id: set_variables
         run: |
-          export RELEASE_TAG=${{github.event.deployment.ref}}
-          export SEM_VER=${RELEASE_TAG/release\/}
+          export RELEASE_REF=${{github.event.deployment.ref}}
+          export SEM_VER=${RELEASE_REF/v}
           echo ::set-output name=SEM_VER::${SEM_VER}
           if [[ "${{github.event.deployment.environment}}" == "prod" ]]
           then
@@ -25,29 +29,17 @@ jobs:
             echo ::set-output name=SLACK_CHANNEL::deploy-staging
             echo ::set-output name=CREATE_RELEASE::true
             echo ::set-output name=PRERELEASE::true
-            echo ::set-output name=SEM_VER::${SEM_VER}-${GITHUB_SHA:0:9}
+            echo ::set-output name=SEM_VER::${SEM_VER}-alpha-${GITHUB_SHA:0:7}
+            # POST a new ref to repo via Github API
+            curl -s -X POST https://api.github.com/repos/${{ github.repository }}/git/refs \
+            -H "Authorization: token ${{ github.token }}" \
+            -H "Content-Type: application/json" \
+            -d '{"ref":"refs/tags/'"v${SEM_VER}-alpha-${GITHUB_SHA:0:7}"'", "sha":"${{ github.event.deployment.sha }}"}'
             echo ::set-output name=SLACK_WEBHOOK::${{ secrets.STAGING_SLACK_WEBHOOK }}
           else
             echo ::set-output name=SLACK_CHANNEL::deploy
             echo ::set-output name=CREATE_RELEASE::false
             echo ::set-output name=SLACK_WEBHOOK::${{ secrets.SLACK_WEBHOOK }}
-          fi
-      - name: Checkout Ref
-        uses: actions/checkout@v1
-        with: 
-          ref: ${{ github.event.deployment.ref }}
-      - name: Create Tag
-        id: create_tag
-        run: |
-          if [[ "${{github.event.deployment.environment}}" == "prod" ]] || [[ "${{github.event.deployment.environment}}" == "staging" ]]
-          then
-            export NEW_TAG="v${{ steps.set_variables.outputs.SEM_VER }}"
-            echo ::set-output name=NEW_TAG::${NEW_TAG}
-            # POST a new ref to repo via Github API
-            curl -s -X POST https://api.github.com/repos/${{ github.repository }}/git/refs \
-            -H "Authorization: token ${{ github.token }}" \
-            -H "Content-Type: application/json" \
-            -d '{"ref":"refs/tags/'"$NEW_TAG"'", "sha":"${{ github.event.deployment.sha }}"}'
           fi
       - name: Setup Node
         uses: actions/setup-node@v1
@@ -59,7 +51,7 @@ jobs:
           SLACK_WEBHOOK: ${{ steps.set_variables.outputs.SLACK_WEBHOOK }}
           SLACK_CHANNEL: ${{ steps.set_variables.outputs.SLACK_CHANNEL }}
           SLACK_TITLE: '${{ github.repository }} deployment to ${{ github.event.deployment.environment }} starting :crossed_fingers:'
-          SLACK_MESSAGE: 'Deploying tag <https://github.com/${{ github.repository }}/tree/${{ github.event.deployment.ref }}|${{ github.event.deployment.ref }}> to ${{ github.event.deployment.environment }}.'
+          SLACK_MESSAGE: 'Deploying <https://github.com/${{ github.repository }}/tree/${{ github.event.deployment.ref }}|${{ github.event.deployment.ref }}> to ${{ github.event.deployment.environment }}.'
           SLACK_COLOR: '#ffff00'
       - name: Deploy Code
         run: bash -e ./scripts/release.sh
@@ -82,7 +74,7 @@ jobs:
         if: success() && ${{ steps.set_variables.outputs.CREATE_RELEASE }}
         with:
           token: ${{ github.token }}
-          tag: ${{ steps.create_tag.outputs.NEW_TAG }}
+          tag: v${{ steps.set_variables.outputs.SEM_VER }}
           name: ${{ steps.set_variables.outputs.SEM_VER }}
           prerelease: ${{ steps.set_variables.outputs.PRERELEASE }}
           allow_override: true
@@ -93,7 +85,7 @@ jobs:
           SLACK_WEBHOOK: ${{ steps.set_variables.outputs.SLACK_WEBHOOK }}
           SLACK_CHANNEL: ${{ steps.set_variables.outputs.SLACK_CHANNEL }}
           SLACK_TITLE: '${{ github.repository }} deployment to ${{ github.event.deployment.environment }} success :rocket:'
-          SLACK_MESSAGE: 'Deployment of tag <https://github.com/${{ github.repository }}/tree/${{ github.event.deployment.ref }}|${{ github.event.deployment.ref }}> to ${{ github.event.deployment.environment }} succeeded.'
+          SLACK_MESSAGE: 'Deployment of <https://github.com/${{ github.repository }}/tree/${{ github.event.deployment.ref }}|${{ github.event.deployment.ref }}> to ${{ github.event.deployment.environment }} succeeded.'
           SLACK_COLOR: '#33cc33'
       - name: Update Deployment Status (failure)
         if: failure()
@@ -109,5 +101,5 @@ jobs:
           SLACK_WEBHOOK: ${{ steps.set_variables.outputs.SLACK_WEBHOOK }}
           SLACK_CHANNEL: ${{ steps.set_variables.outputs.SLACK_CHANNEL }}
           SLACK_TITLE: '${{ github.repository }} deployment to ${{ github.event.deployment.environment }} failure :boom:'
-          SLACK_MESSAGE: 'Deployment of tag <https://github.com/${{ github.repository }}/tree/${{ github.event.deployment.ref }}|${{ github.event.deployment.ref }}> to ${{ github.event.deployment.environment }} failed.'
+          SLACK_MESSAGE: 'Deployment of <https://github.com/${{ github.repository }}/tree/${{ github.event.deployment.ref }}|${{ github.event.deployment.ref }}> to ${{ github.event.deployment.environment }} failed.'
           SLACK_COLOR: '#ff0000'
