--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -1,20 +1,46 @@
 name: Run Tests and Linting
 
 on:
-  push
+  push:
+    branches: 
+      - '**'
 
 jobs:
   deploy:
     name: Run Tests and Linting
     runs-on: ubuntu-latest
     steps:
+      - name: Set up Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: '13'
       - name: Checkout Ref
         uses: actions/checkout@v1
         with: 
           ref: ${{ github.event.push.after }}
-      - uses: actions/setup-node@v1
+      - name: Set Up Variables
+        id: variables
+        run: |
+          export EMPTY_STRING=""
+          echo ::set-output name=MAJOR::$(node -p "re = new RegExp('^(\\\d+).(\\\d+).(\\\d+)'); v = require('./package.json').version; re.exec(v)[1]")
+          echo ::set-output name=MINOR::$(node -p "re = new RegExp('^(\\\d+).(\\\d+).(\\\d+)'); v = require('./package.json').version; re.exec(v)[2]")
+          if [[ "${{ github.event.ref }}" == "refs/heads/master" ]]
+          then
+            echo ::set-output name=SUFFIX::${EMPTY_STRING}
+          else
+            echo ::set-output name=SUFFIX::-${GITHUB_RUN_NUMBER}-${GITHUB_SHA:0:7}
+          fi
+        env: 
+          NPM_TOKEN: ""
+      - name: Bump n Tag
+        uses: evolv-ai/github-actions/semver-bump-tag@v2
+        id: semver_bump
         with:
-          node-version: '13'
+          token: "${{ github.token }}"
+          major: ${{steps.variables.outputs.MAJOR}}
+          minor: ${{steps.variables.outputs.MINOR}}
+          bump: patch
+          suffix: ${{steps.variables.outputs.SUFFIX}}
       - name: Run Tests and Lint
         run: bash -e ./scripts/test.sh
         env: 
