feat: another check

--- a/.github/workflows/on-deployment.yml
+++ b/.github/workflows/on-deployment.yml
@@ -22,6 +22,7 @@ jobs:
           front_page: README.md
       - name: Deploy JsDoc
         uses: peaceiris/actions-gh-pages@v3
+        if: ${{github.event.deployment.environment }} == "staging"
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./docs
