--- a/.github/workflows/on-deployment.yml
+++ b/.github/workflows/on-deployment.yml
@@ -12,14 +12,12 @@ jobs:
         uses: actions/checkout@v1
         with: 
           ref: ${{ github.event.deployment.ref }}
-      - name: Build JsDoc
-        uses: andstor/jsdoc-action@v1
-        if: ${{github.event.deployment.environment }} == "staging"
+      - name: Setup Node
+        uses: actions/setup-node@v1
         with:
-          source_dir: ./src
-          output_dir: ./docs
-          config_file: jsdocs.config.json
-          front_page: README.md
+          node-version: '13'
+      - name: Build JsDoc
+        run: npm run docs
       - name: Deploy JsDoc
         uses: peaceiris/actions-gh-pages@v3
         if: ${{github.event.deployment.environment }} == "staging"
@@ -55,10 +53,6 @@ jobs:
       #       echo ::set-output name=CREATE_RELEASE::false
       #       echo ::set-output name=SLACK_WEBHOOK::${{ secrets.SLACK_WEBHOOK }}
       #     fi
-      # - name: Setup Node
-      #   uses: actions/setup-node@v1
-      #   with:
-      #     node-version: '13'
       # - name: Slack Notification
       #   uses: rtCamp/action-slack-notify@v2.0.2
       #   env:
