--- a/.github/workflows/on-deployment.yml
+++ b/.github/workflows/on-deployment.yml
@@ -17,7 +17,9 @@ jobs:
         with:
           node-version: '13'
       - name: Build JsDoc
-        run: npm run docs
+        run: |
+          npm ci
+          npm run docs
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Deploy JsDoc
