--- a/.github/workflows/on-deployment.yml
+++ b/.github/workflows/on-deployment.yml
@@ -21,12 +21,12 @@ jobs:
           npm ci
           npm run docs
         env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NPM_TOKEN: ""
       - name: Deploy JsDoc
         uses: peaceiris/actions-gh-pages@v3
         if: ${{github.event.deployment.environment }} == "staging"
         with:
-          github_token: ${{ github.token }}
+          github_token: ${{ secrets.PAGES_TOKEN }}
           publish_dir: ./docs
           publish_branch: master
       # - name: Set Variables
