feat: cherry-pick bot

--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -2,8 +2,10 @@ name: Run Tests and Linting
 
 on:
   push:
-    branches: 
-      - '**'
+    branches-ignore:
+     - 'cherry-pick**'
+    tags-ignore:
+     - '**'
 
 jobs:
   deploy:
