chore: build docs on demand
docs shouldn't be in source control. Generate on fly

--- a/jsdocs.config.json
+++ b/jsdocs.config.json
@@ -2,7 +2,7 @@
   "plugins": ["plugins/markdown"],
   "opts": {
     "encoding": "utf8",
-    "destination": "./docs/",
+    "destination": "./dist/docs/",
     "template": "src/docs/template"
   },
   "templates": {
