--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "node": ">=13"
   },
   "scripts": {
-    "prepublishOnly": "webpack --experimental-modules --config=webpack.prod.cjs",
+    "prepublishOnly": "webpack --config=webpack.prod.cjs",
     "lint": "eslint src",
     "test": "mocha --experimental-modules",
     "coverage": "npx nyc mocha --experimental-loader=@istanbuljs/esm-loader-hook npm run test",
     "test:debug": "mocha debug --experimental-modules",
     "prebuild": "npm run docs",
-    "build": "webpack --experimental-modules --config=webpack.dev.cjs",
-    "watch": "webpack --experimental-modules --config=webpack.dev.cjs --watch",
+    "build": "webpack --config=webpack.dev.cjs",
+    "watch": "webpack --config=webpack.dev.cjs --watch",
     "docs": "jsdoc -c jsdocs.config.json src/index.js src/context.js src/docs/README.md",
     "staging:release": "npm run deploy:version:s3 && npm run deploy:next:s3 && npm run deploy:next:npm",
     "release": "npm run deploy:version:s3 && npm run deploy:latest:s3 && npm run deploy:latest:npm",
@@ -55,14 +55,14 @@
     "@istanbuljs/esm-loader-hook": "^0.1.2",
     "chai": "^4.2.0",
     "chai-spies": "^1.0.0",
-    "eslint": "^7.4.0",
-    "eslint-plugin-es": "^3.0.1",
+    "eslint": "^8.1.0",
+    "eslint-plugin-es": "^4.1.0",
     "jsdoc": "^3.6.7",
-    "mocha": "^7.1.0",
+    "mocha": "^9.1.3",
     "nyc": "^15.1.0",
     "webcrypto": "git+https://github.com/nodejs/webcrypto.git",
     "webpack": "^5.30.0",
-    "webpack-cli": "^3.3.11",
+    "webpack-cli": "^4.9.1",
     "webpack-merge": "^4.2.2",
     "xhr-mock": "^2.5.1",
     "xmlhttprequest": "^1.8.0"
