--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
   "license": "MIT",
   "dependencies": {
     "base64-arraybuffer": "^0.2.0",
-    "deepmerge": "^4.2.2"
+    "deepmerge": "^4.2.2",
+    "@sentienttechnologies/hashing": "^1.0.0"
   },
   "devDependencies": {
     "@istanbuljs/esm-loader-hook": "^0.1.2",
