--- a/package.json
+++ b/package.json
@@ -48,9 +48,9 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@evolv/hashing": "^1.1.0",
     "base64-arraybuffer": "^0.2.0",
-    "deepmerge": "^4.2.2",
-    "@sentienttechnologies/hashing": "^1.0.0"
+    "deepmerge": "^4.2.2"
   },
   "devDependencies": {
     "@istanbuljs/esm-loader-hook": "^0.1.2",
