--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@evolv/hashing": "^1.1.0",
     "base64-arraybuffer": "^0.2.0",
     "deepmerge": "^4.2.2"
   },
