--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@evolv/javascript-sdk",
+  "name": "@evolv/client",
   "version": "1.19.0",
   "description": "This is the official JavaScript client for the Evolv Technologies optimization platform.",
   "main": "dist/index.js",
@@ -49,12 +49,15 @@
   "license": "MIT",
   "dependencies": {
     "@evolv/hashing": "^1.1.0",
+    "@testing-library/react-hooks": "^7.0.2",
     "base64-arraybuffer": "^0.2.0",
-    "deepmerge": "^4.2.2"
+    "deepmerge": "^4.2.2",
+    "react-dom": "^17.0.2",
+    "react-test-renderer": "^17.0.2"
   },
   "devDependencies": {
     "@istanbuljs/esm-loader-hook": "^0.1.2",
-    "chai": "^4.2.0",
+    "chai": "^4.3.6",
     "chai-spies": "^1.0.0",
     "eslint": "^8.1.0",
     "eslint-plugin-es": "^4.1.0",
