--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "url": "https://github.com/evolv-ai/javascript-sdk/issues",
     "email": "support@evolv.ai"
   },
+  "files": [
+    "dist/**/*",
+    "src/**/*"
+  ],
   "directories": {
     "doc": "./docs"
   },
