--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@evolv/javascript-sdk",
+  "name": "@evolv/client",
   "version": "1.22.0",
   "description": "This is the official JavaScript client for the Evolv Technologies optimization platform.",
   "main": "dist/index.js",
