--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@evolv/client",
-  "version": "1.23.0",
+  "version": "2.0.0",
   "description": "This is the official JavaScript client for the Evolv Technologies optimization platform.",
   "main": "dist/index.js",
   "module": "src/index.js",
@@ -65,6 +65,7 @@
     "jsdoc": "^3.6.10",
     "mocha": "^9.2.0",
     "nyc": "^15.1.0",
+    "ts-node": "^10.9.1",
     "webcrypto": "git+https://github.com/nodejs/webcrypto.git",
     "webpack": "^5.30.0",
     "webpack-cli": "^4.9.1",
