--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
   },
   "devDependencies": {
     "@istanbuljs/esm-loader-hook": "^0.1.2",
+    "@peculiar/webcrypto": "^1.4.0",
+    "typescript": "^4.7.4",
     "chai": "^4.2.0",
     "chai-spies": "^1.0.0",
     "eslint": "^8.1.0",
@@ -66,7 +68,6 @@
     "mocha": "^9.2.0",
     "nyc": "^15.1.0",
     "ts-node": "^10.9.1",
-    "webcrypto": "git+https://github.com/nodejs/webcrypto.git",
     "webpack": "^5.30.0",
     "webpack-cli": "^4.9.1",
     "webpack-merge": "^4.2.2",
