--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@evolv/client",
-  "version": "1.23.0",
+  "version": "2.0.0",
   "description": "This is the official JavaScript client for the Evolv Technologies optimization platform.",
   "main": "dist/index.js",
   "module": "src/index.js",
@@ -58,6 +58,7 @@
   },
   "devDependencies": {
     "@istanbuljs/esm-loader-hook": "^0.1.2",
+    "@peculiar/webcrypto": "^1.4.0",
     "chai": "^4.2.0",
     "chai-spies": "^1.0.0",
     "eslint": "^8.1.0",
@@ -65,7 +66,8 @@
     "jsdoc": "^3.6.10",
     "mocha": "^9.2.0",
     "nyc": "^15.1.0",
-    "webcrypto": "git+https://github.com/nodejs/webcrypto.git",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4",
     "webpack": "^5.30.0",
     "webpack-cli": "^4.9.1",
     "webpack-merge": "^4.2.2",
