--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This is the official JavaScript client for the Evolv Technologies optimization platform.",
   "main": "dist/index.js",
   "module": "src/index.js",
+  "types": "src/types.d.ts",
   "exports": {
     "import": "./src/index.js",
     "require": "./dist/index.js"
