build(AP-1778): make differential builds for node and browser (#129)
* build(AP-1778): extract request functions into separate files

so that they can be conditionally imported based on the target runtime

* fix(AP-1859): normalize trailing slash of endpoint url

* build(AP-1778): replace webpack with rollup

* ci(AP-1778): bump version of node used by actions

the purpose being so that NPM > 7 is installed and thus peer dependencies are installed automatically when running npm install

Co-authored-by: Matt Strom <matt.strom@evolv.ai>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,8 @@
     "eslint:recommended"
   ],
   "parserOptions": {
-    "sourceType": "module"
+    "sourceType": "module",
+    "ecmaVersion": 11
   },
   "rules": {
     "object-shorthand": [ "error", "never" ],
@@ -20,5 +21,16 @@
     "es/no-for-of-loops": [ "error" ],
     "es/no-destructuring": [ "error" ]
   },
-  "ignorePatterns": ["tests/", "docs/"]
+  "ignorePatterns": ["tests/", "docs/"],
+  "overrides": [
+    {
+      "files": [
+        "rollup.config.js"
+      ],
+      "rules": {
+        "es/no-spread-elements": "off",
+        "es/no-template-literals": "off"
+      }
+    }
+  ]
 }
