fix(AP-1778): reorder exports in package.json
earlier entries have priority, so "node" was being ignored since "import" was listed earlier

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,8 @@
         "rollup.config.js"
       ],
       "rules": {
+        "object-shorthand": "off",
+        "es/no-arrow-functions": "off",
         "es/no-spread-elements": "off",
         "es/no-template-literals": "off"
       }
