fix(AP-1778): expand semver range of base64-arraybuffer peer dep

--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
   },
   "peerDependencies": {
     "@evolv/hashing": "^1.1.0",
-    "base64-arraybuffer": "^0.2.0",
+    "base64-arraybuffer": ">=0.2.0",
     "deepmerge": "^4.2.2"
   },
   "devDependencies": {
