--- a/package.json
+++ b/package.json
@@ -81,7 +81,8 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
     "xhr-mock": "^2.5.1",
-    "xmlhttprequest": "^1.8.0"
+    "xmlhttprequest": "^1.8.0",
+    "sinon": "^15.0.3"
   },
   "mocha": {
     "extension": [
