remove missed unregister call and add exit to allow tests to end with setInterval

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "scripts": {
     "lint": "eslint src",
-    "test": "mocha --experimental-modules",
+    "test": "mocha --experimental-modules --exit",
     "coverage": "npx nyc mocha --experimental-loader=@istanbuljs/esm-loader-hook npm run test",
     "test:debug": "mocha debug --experimental-modules",
     "clean": "del dist",
