--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "scripts": {
     "lint": "eslint src",
-    "test": "mocha --experimental-modules",
+    "test": "mocha --experimental-modules --exit",
     "coverage": "npx nyc mocha --experimental-loader=@istanbuljs/esm-loader-hook npm run test",
     "test:debug": "mocha debug --experimental-modules",
     "clean": "del dist",
@@ -81,7 +81,8 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
     "xhr-mock": "^2.5.1",
-    "xmlhttprequest": "^1.8.0"
+    "xmlhttprequest": "^1.8.0",
+    "sinon": "^15.0.3"
   },
   "mocha": {
     "extension": [
