--- a/.github/workflows/license-check.yml
+++ b/.github/workflows/license-check.yml
@@ -16,9 +16,9 @@ jobs:
       - name: Checkout Ref
         uses: actions/checkout@v1
       - name: Install dependencies
-        run: npm install
+        run: npm install && npm install -g license-checker
       - name: Generate license-checker CSV file
-        run: license-checker --start --production --csv
+        run: license-checker --start --production --csv --out npm-license-checker.csv
       - name: Check license-checker CSV file without headers
         id: license_check_report
         uses: pilosus/action-pip-license-checker@v2
