--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -28,7 +28,7 @@ jobs:
          NPM_TOKEN: ""
       - name: Bump n Tag
         if: github.event.ref == 'refs/heads/master'
-        uses: evolv-ai/github-actions/semver-bump-tag@v11
+        uses: evolv-ai/github-actions/semver-bump-tag@latest
         id: semver_bump
         with:
           token: "${{ github.token }}"
