ci: set up trusted publisher for npm

--- a/.github/workflows/on-deployment.yml
+++ b/.github/workflows/on-deployment.yml
@@ -10,6 +10,10 @@ jobs:
   deploy:
     name: Deploy to Environment
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write # NPM Trusted Publisher (eliminates need for NPM_TOKEN)
+      contents: write
+      deployments: write
     steps:
       - name: Checkout Ref
         uses: actions/checkout@v1
@@ -54,9 +58,9 @@ jobs:
             echo ::set-output name=SLACK_WEBHOOK::${{ secrets.SLACK_WEBHOOK }}
           fi
       - name: Setup Node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          node-version: '16.14.2'
+          node-version-file: '.nvmrc'
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
